--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,30 @@
-<h2>Forgot your password?</h2>
+<html lang="en" dir="ltr">
+  
+  <div>
+    </br>
+    <a href="/">Back to Home Page</a>
+    </br>
+    </br>
+  </div>
+  <body class="form-body">
 
+<h1>Forgot your password?</h1>
+Enter email to receive reset password instructions.
+</br>
+</br>
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
-
+  </br>
   <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <%= f.submit "Submit" %>
   </div>
 <% end %>
-
+</br>
+</body>
+</html>
 <%= render "devise/shared/links" %>
