--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,13 +1,23 @@
-<h2>Sign up</h2>
+<html lang="en" dir="ltr">
 
+  <div>
+    </br>
+    <a href="/">Back to Home Page</a>
+    </br>
+    </br>
+  </div>
+  <body class="form-body">
+
+
+<h1>Sign up to RankUp</h1>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
-
+  </br>
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
-
+  </br>
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
@@ -15,15 +25,17 @@
     <% end %><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
-
+  </br>
   <div class="field">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
-
+  </br>
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
-
+</br>
+</body>
+</html>
 <%= render "devise/shared/links" %>
