--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,7 +54,7 @@ button {
   background-color: black!important;
 }
 
-.contact_us{
+.contact_us {
   background-size: auto;
   border: none;
   margin: 0 auto;
@@ -62,6 +62,15 @@ button {
   background-color: lightgrey!important;
   font-family: "Lucida Console", monospace;
   color: rgb(87, 1, 1);
+}
+
+.container {
+  width: 100%;
+  border: 1px solid rgb(95, 11, 15);
+  border-radius: 10px;
+  padding: 40px 40px 40px 40px;
+  font-family: "Lucida Console", monospace;
+  background-image: url("Container.png");
 }
 
 footer {
@@ -77,7 +86,7 @@ footer {
 
 }
 
-.form-body{
+.form-body {
   text-align: center;
   margin: 0;
   position: absolute;
@@ -95,7 +104,7 @@ footer {
   background-repeat: no-repeat;
 }
 
-h1 {
+h1, h4 {
   text-align: center;
   font-family: "Courier New", monospace;
   color: rgb(87, 1, 1);
@@ -134,6 +143,7 @@ header {
 .my-2 {
   background-image: url("Cards_bg.png")
 }
+
 .student_cards {
   text-align: center;
   font-family: "Courier New", monospace;
