--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,6 +41,16 @@ a:hover, a:active {
   color: rgb(87, 1, 1)!important;
 }
 
+.add_container {
+  width: 100%;
+  border: 10px double gray;
+  border-radius: 10px;
+  padding: 80px 80px 80px 80px;
+  font-family: "Lucida Console", monospace;
+  background-color: rgb(245, 243, 240) !important;
+  // text-align: center;
+}
+
 button {
   width: 150px;
   height: 40px;
@@ -64,6 +74,13 @@ button {
   color: rgb(87, 1, 1);
 }
 
+.container {
+  width: 100%;
+  border-radius: 10px;
+  padding: 80px 80px 80px 80px;
+  font-family: "Lucida Console", monospace;
+}
+
 footer {
   display: inline-block;
   bottom: 0;
@@ -74,14 +91,13 @@ footer {
   display: inline-block;
   text-align: center;
   position: relative;
-
 }
 
 .form-body{
   text-align: center;
   margin: 0;
   position: absolute;
-  top: 50%;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: black;
@@ -95,7 +111,7 @@ footer {
   background-repeat: no-repeat;
 }
 
-h1 {
+h1, h4 {
   text-align: center;
   font-family: "Courier New", monospace;
   color: rgb(87, 1, 1);
@@ -108,13 +124,13 @@ header {
   margin: 0;
   position: sticky;
   background-color: none !important;
+  position: relative;
 }
 
 .home_image {
   background-size: auto;
   border: none;
 }
-
 
 .home_button {
   text-align: center;
@@ -125,6 +141,11 @@ header {
   transform: translate(-50%, -50%);
 }
 
+.index_photo {
+  height: 250px !important; 
+  object-fit: none !important; 
+}
+
 .logo {
   margin-left: 20px;
   width: 20%;
@@ -132,8 +153,15 @@ header {
 }
 
 .my-2 {
-  background-image: url("Cards_bg.png")
+  justify-content: space-around !important;
+  row-gap: 20%;
 }
+
+.ready_stamp {
+  margin-left: 60%;
+  width: 50%;
+}
+
 .student_cards {
   text-align: center;
   font-family: "Courier New", monospace;
@@ -143,8 +171,14 @@ header {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content:space-around;
+  justify-content: space-around;
   gap: 20%;
+}
+
+.student_cards2{
+  border: 2px solid rgb(95, 11, 15);
+  margin-bottom: 20px;
+  background-color: rgb(219, 200, 173) !important
 }
 
 .student_show {
@@ -153,11 +187,11 @@ header {
 }
 
 .show_row {
-  padding: 20px 20px 20px 20px;
-  background-color: none !important
+  padding: 10px 150px 300px 150px;
+  background-color: none !important;
 }
 
 .show_button {
-  padding: 20px 20px 0px 0px;
+  padding: 40px 0px 0px 0px;
 }
 
