--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,11 @@
 <html lang="en" dir="ltr">
 
-  <div>
-    </br>
-    <h3><a href="/">Back to Home Page</a></h3
-    </br>
-    </br>
-  </div>
-  <body class="form-body">
+<div>
+  <h1> Welcome to RankUp </h1>
+    <h5><a href="/">Back to Home Page</a></h5>
+    <br/>
+</div>
+<body class="form-body">
 
 <h1>Forgot your password?</h1>
 Enter email to receive reset password instructions.
@@ -22,7 +21,7 @@ Enter email to receive reset password instructions.
   </div>
   </br>
   <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <%= f.submit "Reset password" %>
   </div>
 <% end %>
 </br>
