--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,13 +1,14 @@
 <html lang="en" dir="ltr">
 
   <div>
-    </br>
-    <h3><a href="/">Back to Home Page</a></h3>
+    <h1> Welcome to RankUp </h1>
+    <h5><a href="/">Back to Home Page</a></h5>
+    <br/>
   </div>
   <body class="form-body">
 
 
-<h1>Sign up to RankUp</h1>
+<h1>Sign Up</h1>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
   <div class="field">
